- uses #valueOf(String) to obtain an instance of a wrapper object from the given string; if possible #valueOf(String) would return a cached object.